# erpc_project

./: .gitmodules
test_arbitrator/: CMakeLists.txt  erpc_config.h
test_arbitrator/client/: test_arbitrator_client.cpp  test_arbitrator_client_impl.cpp
test_arbitrator/idl/: erpcCore0.erpc  erpcCore0.h  erpcCore0_client.cpp  erpcCore0_server.cpp  erpcCore0_server.h  erpcCore1.erpc  erpcCore1.h  erpcCore1_client.cpp  erpcCore1_server.cpp  erpcCore1_server.h
test_arbitrator/server/: test_arbitrator_server.cpp  test_arbitrator_server_impl.cpp
test_tcp_simple/: CMakeLists.txt
test_tcp_simple/client/: test_erpcdemo_client.cpp
test_tcp_simple/idl/: erpcdemo.erpc  erpcdemo.h  erpcdemo_client.cpp  erpcdemo_server.cpp  erpcdemo_server.h
test_tcp_simple/server/: erpcdemo_server_impl.cpp  test_erpcdemo_server.cpp
